# quantum-conformal-prediction

./: .gitignore  README.md  main.py  pyproject.toml  test.sh  training.py
.github/workflows/: tests.yml
experiments/: generate_figures.py  generate_results.py  informativeness.py  measurement_histograms.py  prediction_intervals.py  predictor_evaluation.py  set_size_and_coverage.py
protocols/: measurement_histograms_bad.yml  measurement_histograms_good.yml  predictor_evaluation.yml  results_11.yml  results_7.yml  results_8_a.yml  results_8_b.yml  set_size_and_coverage.yml  sup_prediction_intervals.yml  unsup_coverage_and_set_size.yml  unsup_informativeness.yml  unsup_prediction_sets.yml
specifications/: combined_normals_bad.yml  combined_normals_good.yml  gibbs_states.yml  heteroscedastic_bad.yml  heteroscedastic_good.yml  sinusoidal.yml  standard_normal.yml
specifications/old/: 14_regression_model_trainer.yml  supervised_trainer.yml  supervised_trainer_2.yml  unsupervised_trainer_skewed.yml
src/qcp/: .gitignore  README.md  main.py
src/qcp/collection/: data_generation.py  shot_collector.py
src/qcp/distributions/: combined_normals.py  distribution_manager.py  heteroscedastic.py  normal.py  sinusoidal.py  (+1 more)
tests/: test_distributions.py  test_intervals.py
tests/integration/: test_pipeline.py
tests/unit/: test_angle_encoders.py  test_circuit_manager.py  test_circuits.py  test_conformal_predictor.py  test_eigenvector_conversion.py  test_factory_and_cli.py  test_file_handling.py  test_intervals.py  test_metrics_and_distributions.py  test_scoring_functions.py
(+39 files in other folders)
